@startuml

class "ChangeStatusUI"
class "ChangeStatusController"
class "Repository"
class "Account"

"ChangeStatusUI" ..> "ChangeStatusController"
"ChangeStatusController"  ..> "Repository"
"Repository" "1  " -->"*" "Account"

class "ChangeStatusController"{
-Account
-Repository
+changeStatus(email, status)
}
class "Repository"{
-accountsList
+doesEmailExist(email)
}

class Account{
- accountStatus
-email
+ updateStatus(accountStatus)
}

hide "ChangeStatusUI" circle
hide "ChangeStatusController" circle
hide "Repository" circle
hide "Account" circle

@enduml